--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ project(Dyrwin)
 
 set(CMAKE_CXX_STANDARD 11)
 
+FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+
 set (CMAKE_EXE_LINKER_FLAGS -lboost_program_options )
 
-set(SOURCE_FILES src/main.cpp src/Player.cpp include/Dyrwin/Player.h include/Dyrwin/Constants.h src/WrightFisherModel.cpp include/Dyrwin/WrightFisherModel.h src/PrisonersDilemma.cpp include/Dyrwin/PrisonersDilemma.h src/CollectiveRiskDilemma.cpp include/Dyrwin/CollectiveRiskDilemma.h src/CRDPlayer.cpp include/Dyrwin/CRDPlayer.h src/ParameterHandler.cpp include/Dyrwin/ParameterHandler.h src/MoranProcess.cpp include/Dyrwin/MoranProcess.h src/BasePlayer.cpp include/Dyrwin/BasePlayer.h src/CRDSimulator.cpp include/Dyrwin/CRDSimulator.h src/CRDMutate.cpp include/Dyrwin/CRDMutate.h src/OutputHandler.cpp include/Dyrwin/OutputHandler.h include/Dyrwin/Utils.h src/SeedGenerator.cpp include/Dyrwin/SeedGenerator.h include/Dyrwin/CommandLineParsing.h)
+set(SOURCE_FILES src/main.cpp src/CollectiveRiskDilemma.cpp include/Dyrwin/CollectiveRiskDilemma.h src/CRDPlayer.cpp src/CRDSimulator.cpp include/Dyrwin/CRDSimulator.h include/Dyrwin/Utils.h src/SeedGenerator.cpp include/Dyrwin/SeedGenerator.h include/Dyrwin/CommandLineParsing.h)
 add_executable(Dyrwin ${SOURCE_FILES})
+TARGET_LINK_LIBRARIES(Dyrwin ${Boost_LIBRARIES})
