parallelize CRD game implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,9 @@ if (MAKE_CRD)
     TARGET_LINK_LIBRARIES(crd ${Boost_LIBRARIES} boost_program_options)
     set_target_properties(crd PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
     target_link_libraries(crd Eigen3::Eigen)
+    if (OPENMP_FOUND)
+        target_link_libraries(crd OpenMP::OpenMP_CXX)
+    endif ()
 endif ()
 
 if (MAKE_CRD_UNCERTAINTY)
@@ -181,6 +184,9 @@ if (MAKE_CRD_UNCERTAINTY)
     TARGET_LINK_LIBRARIES(crdTU ${Boost_LIBRARIES} boost_program_options)
     set_target_properties(crdTU PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
     target_link_libraries(crdTU Eigen3::Eigen)
+    if (OPENMP_FOUND)
+        target_link_libraries(crdTU OpenMP::OpenMP_CXX)
+    endif ()
 endif ()
 
 # Python bindings
