implemented Multi Level selection
- still need to implement the calculation of the transition matrix
- need to reformat code
- missing implementation of simulations for different beta

--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,8 @@ ENV/
 # Rope project settings
 .ropeproject
 
+# Idea stuff
 .idea/workspace.xml
 cmake-build-debug/
+cmake-build-release/
+python/
