updated header safeguards

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -47,3 +47,9 @@ if (MAKE_CRD_POP)
     set_target_properties(crdP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
     target_link_libraries(crdP EGTTools)
 endif ()
+
+add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
+target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
+set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
+set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+target_link_libraries(crdC EGTTools)
