--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -51,5 +51,5 @@ endif ()
 add_executable(crdC RL/main_conditional.cpp ${CRD_RL_SOURCE})
 target_link_libraries(crdC ${Boost_LIBRARIES} boost_program_options)
 set_target_properties(crdC PROPERTIES CMAKE_CXX_FLAGS lboost_program_options)
-set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
+#set_target_properties(crdC PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
 target_link_libraries(crdC EGTTools)
